--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,15 @@ repositories {
 }
 
 dependencies {
-  compile group: "biz.aQute.bnd",  name: "biz.aQute.bndlib",  version: "3.1.0"
-	compile group: "org.osgi",       name: "org.osgi.core",     version: "6.0.0"
+  compile group: "biz.aQute.bnd",  name: "biz.aQute.bndlib",  version: "3.5.0"
+  compile group: "org.osgi",       name: "org.osgi.core",     version: "6.0.0"
 }
 
 task uberjar(type: Jar) {
-    from files(sourceSets.main.output.classesDir)
+    from files(sourceSets.main.output.classesDirs)
     from {configurations.compile.collect {zipTree(it)}} {
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
 	}
-}
-
-build {
-  doLast {
-     uberjar.execute()
-  }
 }
